# juris-stj

./: .gitignore  README.md  dicionario.csv  pyproject.toml
src/stj_search/: __init__.py  cli.py  client.py  config.py  db.py  models.py  sync.py
