[project]
name = "stj-search"
version = "0.1.0"
description = "CLI tool for searching Brazilian STJ jurisprudence from open data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
stj = "stj_search.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stj_search"]
